--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "LAKSHAN-MD-BOT",
+  "name": "LAKSHAN MD BOT",
   "description": "Javascript WhatsApp bot made by avishka",
   "logo": "https://photos.app.goo.gl/KjfJKA4PZZzjUzyN6.jpg",
   "keywords": ["bot"],
