--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LAKSHAN-MD",
+  "name": "LAKSHAN MD BOT",
   "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
