--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "LAKSHAN MD BOT",
+  "name": "LAKSHAN BOT",
   "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --LAKSHAN MD BOT",
-    "stop": "pm2 stop LAKSHAN MD BOT",
-    "restart": "pm2 restart LAKSHAN MD BOT"
+    "start": "pm2 start index.js --deep-monitoring --attach --LAKSHAN BOT",
+    "stop": "pm2 stop LAKSHAN BOT",
+    "restart": "pm2 restart LAKSHAN BOT"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.6.0",
@@ -26,4 +26,4 @@
     "yt-search":"2.11.1",
     "api-dylux":"1.8.5"
   }
-},
+}
